<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.test.itsavirustest.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_myorder"
        android:name="com.test.itsavirustest.ui.myorder.MyOrderFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_myorder" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.test.itsavirustest.ui.account.AccountFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>