<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_top"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_marker"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_margin="16dp"/>


            <EditText
                android:id="@+id/searchFinder"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/textbox_style"
                android:drawableStart="@drawable/ic_search"
                android:drawablePadding="8dp"
                android:drawableTint="#C81E1E1E"
                android:hint="@string/search"
                android:paddingStart="15dp"
                android:textColorHint="#C81E1E1E"
                android:textSize="16sp"
                tools:targetApi="m"
                android:layout_marginStart="18dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="18dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>


            <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="@+id/imageView"
                    app:layout_constraintVertical_bias="0.23">

                    <TextView
                        android:id="@+id/tv_current_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="8dp"
                        android:paddingStart="4dp"
                        android:text="@string/current_location"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_street_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/street_name"
                        android:textColor="@color/black"
                        android:drawablePadding="8dp"
                        android:paddingStart="4dp"
                        />

                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:cardCornerRadius="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/searchFinder"
                    app:layout_constraintVertical_bias="0.0">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="MissingConstraints">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:drawableLeft="@drawable/ic_filter"
                            android:drawablePadding="8dp"
                            android:text="@string/filter"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </androidx.cardview.widget.CardView>


                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_near"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        app:cardCornerRadius="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/card_filter">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/nearby"
                            android:textSize="16sp" />
                    </androidx.cardview.widget.CardView>


                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_popular"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        app:cardCornerRadius="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/card_near">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/popular"
                            android:textSize="16sp" />
                    </androidx.cardview.widget.CardView>
                </androidx.constraintlayout.widget.ConstraintLayout>


                <View
                    android:id="@+id/view"
                    android:layout_width="405dp"
                    android:layout_height="2dp"
                    android:background="#C4939393"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                    app:layout_constraintVertical_bias="0.0" />

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                    app:layout_constraintTop_toTopOf="@+id/view"
                    app:layout_constraintVertical_bias="0.0">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_restaurantList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:listitem="@layout/item_list_restaurant" />
                </androidx.core.widget.NestedScrollView>

<!--            <include-->
<!--                android:id="@+id/progress_loading_id"-->
<!--                layout="@layout/progress_loading" />-->

<!--            <include-->
<!--                android:id="@+id/failed_load_id"-->
<!--                layout="@layout/failed_load_layout" />-->

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</layout>