<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraint_top"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:focusable="true"
                        android:focusableInTouchMode="true">

                        <LinearLayout
                            android:id="@+id/linearLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:gravity="center|left"
                            android:orientation="horizontal"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageView
                                android:id="@+id/imageView"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/ic_marker" />

                            <LinearLayout
                                android:id="@+id/lnCurrentLocation"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:background="@color/white"
                                android:gravity="center"
                                android:orientation="vertical"
                                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.0"
                                app:layout_constraintStart_toEndOf="@+id/imageView"
                                app:layout_constraintTop_toTopOf="@+id/imageView"
                                app:layout_constraintVertical_bias="0.23">

                                <TextView
                                    android:id="@+id/tv_current_location"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:drawablePadding="8dp"
                                    android:paddingStart="4dp"
                                    android:text="@string/current_location"
                                    android:textSize="14sp"
                                    android:gravity="start"
                                    android:layout_gravity="start"/>

                                <TextView
                                    android:id="@+id/tv_street_name"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:drawablePadding="8dp"
                                    android:paddingStart="4dp"
                                    android:text="@string/street_name"
                                    android:textColor="@color/black"
                                    android:ellipsize="end"
                                    android:gravity="start"
                                    android:layout_gravity="start"/>

                            </LinearLayout>

                        </LinearLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/lnSearch"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                            android:layout_margin="8dp">

                            <EditText
                                android:id="@+id/searchFinder"
                                android:layout_width="0dp"
                                android:layout_height="45dp"
                                android:layout_margin="8dp"
                                android:background="@drawable/textbox_style"
                                android:drawableStart="@drawable/ic_search"
                                android:drawablePadding="8dp"
                                android:drawableTint="#C81E1E1E"
                                android:hint="@string/search"
                                android:imeOptions="actionSearch"
                                android:inputType="text"
                                android:textColorHint="#C81E1E1E"
                                android:textSize="16sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toStartOf="@+id/btnSearchOption"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                tools:targetApi="m" />

                            <ImageView
                                android:id="@+id/btnSearchOption"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_dots_vertical"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />


                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/chipGroupSearch"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="24dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/lnSearch">

                        </com.google.android.material.chip.ChipGroup>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/constraintLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            app:cardCornerRadius="8dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/chipGroupSearch"
                            app:layout_constraintVertical_bias="0.0">

                            <androidx.cardview.widget.CardView
                                android:id="@+id/card_filter"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:ignore="MissingConstraints">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="8dp"
                                    android:drawableLeft="@drawable/ic_filter"
                                    android:drawablePadding="8dp"
                                    android:text="@string/filter"
                                    android:textColor="@color/black"
                                    android:textSize="16sp" />
                            </androidx.cardview.widget.CardView>


                            <androidx.cardview.widget.CardView
                                android:id="@+id/card_near"
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="16dp"
                                app:cardCornerRadius="8dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/card_filter">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="8dp"
                                    android:text="@string/nearby"
                                    android:textSize="16sp" />
                            </androidx.cardview.widget.CardView>


                            <androidx.cardview.widget.CardView
                                android:id="@+id/card_popular"
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="16dp"
                                app:cardCornerRadius="8dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.0"
                                app:layout_constraintStart_toEndOf="@+id/card_near">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="8dp"
                                    android:text="@string/popular"
                                    android:textSize="16sp" />
                            </androidx.cardview.widget.CardView>
                        </androidx.constraintlayout.widget.ConstraintLayout>


                        <View
                            android:id="@+id/view"
                            android:layout_width="405dp"
                            android:layout_height="2dp"
                            android:background="#C4939393"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                            app:layout_constraintVertical_bias="0.0" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                            app:layout_constraintTop_toTopOf="@+id/view">

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/rv_restaurantList"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                tools:listitem="@layout/item_list_restaurant" />

                            <!--                            <include-->
                            <!--                                android:id="@+id/progress_loading_id"-->
                            <!--                                layout="@layout/progress_loading" />-->

                            <ProgressBar
                                android:id="@+id/progressBar1"
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:layout_gravity="center_horizontal"
                                android:indeterminateTint="@color/colorPrimary"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.0" />

                        </androidx.constraintlayout.widget.ConstraintLayout>


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</layout>